--- a/apptapp-installer-writer/changelog.txt
+++ b/apptapp-installer-writer/changelog.txt
@@ -1,3 +1,5 @@
 version 0.1 - first release.
 
 version 0.2 - added Exec, added date and category support in output xml.
+
+version 0.2.1 - aded ExecNoError support.
