Write an Installer source xml file with aiw

--- a/apptapp-installer-writer/changelog.txt
+++ b/apptapp-installer-writer/changelog.txt
@@ -7,3 +7,5 @@ version 0.2.1 - aded ExecNoError support.
 version 0.2.2 - added optional MD5 support. Prettier aiw.c. 
 
 version 0.2.3 - new args, manually specify elements to be written to the XML instead of going through a list of all of them. 
+
+version 0.2.4 - numerous bug fixes specifically for RemovePath implementation. New --start arg allows you to start the XML for an Installer source.
