--- a/TODO
+++ b/TODO
@@ -1,4 +1,7 @@
-
+** 3.1.3 Final **
+- Automatically get unix time and set it in xml.
+- Implement all script commands supported by Installer 3.
+- Make more in depth error messages shown to the user and not just the command line.
 ** 3.2+ **
 
 - is there room enough to download the package? is there room to install it in all the places (filesystems) it needs to go in?
